add getUsers routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=9090
 # h2 conf
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+logging.level.org.hibernate.SQL=debug
